# egui-phosphor

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: fonts.yaml
examples/: create_file.rs  debug_alignment.rs  list_all.rs  multiple_variants.rs  simple_debug.rs
scripts/: update.py
src/: icons.rs  lib.rs
src/variants/: bold.rs  mod.rs
