[package]
name = "egui-phosphor"
description = "Phosphor icons for egui"
version = "0.7.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/amPerl/egui-phosphor"

[dependencies]
egui = { version = "0.29", default-features = false }

[features]
default = ["regular"]
thin = []
light = []
regular = []
bold = []
fill = []

[dev-dependencies]
eframe = "0.29"

[[example]]
name = "multiple_variants"
required-features = ["thin", "light", "regular", "bold", "fill"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
nursery = { level = "deny", priority = 0 }
pedantic = { level = "deny", priority = 1 }
enum_glob_use = { level = "deny", priority = 2 }
module_name_repetitions = { level = "allow", priority = 3 }
cast_precision_loss = { level = "allow", priority = 4 }
