[package]
name = "egui-phosphor"
description = "Phosphor icons for egui"
version = "0.7.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/amPerl/egui-phosphor"

[dependencies]
egui = { version = "0.30", default-features = false }

[features]
default = ["regular"]
thin = []
light = []
regular = []
bold = []
fill = []

[dev-dependencies]
eframe = "0.30"

[[example]]
name = "multiple_variants"
required-features = ["thin", "light", "regular", "bold", "fill"]
