[package]
name = "egui-phosphor"
description = "Phosphor icons for egui"
version = "0.11.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/amPerl/egui-phosphor"

[dependencies]
bevy_egui = { version = "0.37.0"}

[features]
default = ["regular"]
thin = []
light = []
regular = []
bold = []
fill = []

[dev-dependencies]
eframe = "0.33.2"

[[example]]
name = "multiple_variants"
required-features = ["thin", "light", "regular", "bold", "fill"]
